# tfr

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/mmv/: errors.rs  mod.rs  rename_mod.rs  template_applier.rs
src/mmv/file_utils/: file_template.rs  mod.rs  resolve_path_pattern.rs
tests/: files_environment.rs  tests.rs
tests/tests/: directory.json  escaped_asterisk.json  flag_before_last_part.json  multiple_asterisks.json  output_template_with_hash.json  overwrite_when_exists.json  png.json  simple.json  skip_when_exists.json  terminate.json  terminate2.json
tests/tests/nothing_to_rename/: png.json  simple.json
tests/tests/templates_error/: asterisk_before_last_part.json  captures_not_covered_by_flags.json  double_asterisk.json
