[package]
name = "tfr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.10.0"
chrono = "0.4.31"
itertools = "0.11.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

